--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
     })();
 
     /* rotating typewriter line */
-    const words = ['An Innovator','A Software Developer','An Engineer','A Roboticist','An Entrepreneur','An AI/ML Enthusiast'];
+    const words = ['An Innovator','A Software Developer','An AI/ML Enthusiast', 'An Engineer','A Roboticist','An Entrepreneur'];
     const line  = document.getElementById('role-line');
     let idx = 0, char = 0, del = false;
     function type() {
