--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
     <div class="max-w-7xl mx-auto px-4 flex items-center justify-between h-16">
       <span class="text-xl font-extrabold text-darkgreen">VN</span>
       <div class="space-x-8 hidden md:flex">
-        <a href="index.html"        class="nav-link px-3 py-2">Home</a>
-        <a href="professional.html" class="nav-link       px-3 py-2">Professional</a>
+        <a href=",/"        class="nav-link px-3 py-2">Home</a>
+        <a href="./professional" class="nav-link       px-3 py-2">Professional</a>
         <!-- Contact dropdown -->
         <div class="relative group">
           <button class="nav-link px-3 py-2 flex items-center gap-1">
@@ -144,8 +144,8 @@
 <div id="mobile-nav"
      class="fixed top-16 right-0 w-60 bg-black bg-opacity-95 border-l border-accentgreen
             transform translate-x-full transition-transform duration-200 z-40 md:hidden">
-  <a href="index.html"        class="block px-6 py-4 nav-link border-b border-gray-800">Home</a>
-  <a href="professional.html" class="block px-6 py-4 nav-link border-b border-gray-800">Professional</a>
+  <a href="./"        class="block px-6 py-4 nav-link border-b border-gray-800">Home</a>
+  <a href="./professional" class="block px-6 py-4 nav-link border-b border-gray-800">Professional</a>
   <button id="mobile-contact"
           class="w-full text-left px-6 py-4 flex items-center gap-3 border-b border-gray-800">
     Contact <i class="fas fa-chevron-down ml-auto"></i>
