--- a/professional.html
+++ b/professional.html
@@ -280,8 +280,8 @@
 
       <!-- Right‑aligned menu -->
       <div class="space-x-8 hidden md:flex">
-        <a href="index.html"        class="nav-link px-3 py-2">Home</a>
-        <a href="professional.html" class="nav-link px-3 py-2">Professional</a>
+        <a href="./"        class="nav-link px-3 py-2">Home</a>
+        <a href="./professional" class="nav-link px-3 py-2">Professional</a>
 
         <!-- Contact dropdown -->
         <div class="relative group">
