--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
         <!-- portrait -->
         <div class="flex justify-center md:justify-end fade-up" style="animation-delay:.05s">
-          <img src="portrait.JPG"
+          <img src="./portrait.JPG"
                alt="Vishal portrait"
                class="w-72 sm:w-96 md:w-[22rem] lg:w-[26rem] xl:w-[28rem] aspect-square rounded-2xl object-cover shadow-[0_10px_40px_rgba(0,0,0,0.5)]">
         </div>
