--- a/professional.html
+++ b/professional.html
@@ -90,16 +90,21 @@
   }
 
   @media (max-width: 768px) {
+    .carousel-track {
+      transform-style: preserve-3d;
+    }
+    
     .carousel-slide {
       flex: 0 0 calc(100% - 2rem) !important;
       opacity: 0 !important;
       transform: scale(0.85) !important;
       filter: brightness(0.6) !important;
       pointer-events: none;
+      transform-style: preserve-3d;
     }
     .carousel-slide.active {
       opacity: 1 !important;
-      transform: scale(1) !important;
+      transform: scale(1) translateZ(0) !important;
       filter: brightness(1) !important;
       pointer-events: auto;
     }
@@ -111,6 +116,10 @@
     /* Mobile flip card fix */
     .carousel-slide:not(.active) .flip-card-inner {
       transform: rotateY(0deg) !important;
+    }
+    .carousel-slide.active .flip-card-inner {
+      -webkit-backface-visibility: hidden;
+      backface-visibility: hidden;
     }
     .carousel-slide:not(.active) .flip-card {
       pointer-events: none !important;
