--- a/professional.html
+++ b/professional.html
@@ -136,6 +136,7 @@
   /* Fixed Flip Animation */
   .flip-card {
     perspective: 1000px;
+    -webkit-perspective: 1000px;
     cursor: pointer;
     transform-style: preserve-3d;
     height: 100%;
@@ -144,7 +145,9 @@
     position: relative;
     width: 100%;
     height: 100%;
+    -webkit-transition: transform 0.6s;
     transition: transform 0.6s;
+    -webkit-transform-style: preserve-3d;
     transform-style: preserve-3d;
   }
   .flip-card.flipped .flip-card-inner {
@@ -157,9 +160,11 @@
     height: 100%;
     backface-visibility: hidden;
     -webkit-backface-visibility: hidden;
+    -webkit-transform-style: preserve-3d;
     transform-style: preserve-3d;
   }
   .flip-card-back {
+    -webkit-transform: rotateY(180deg);
     transform: rotateY(180deg);
     padding: 1.5rem;
   }
