--- a/professional.html
+++ b/professional.html
@@ -133,6 +133,30 @@
       width: 100%;
       height: 100%;
     }
+    .project-card {
+      min-height: 420px;
+      max-height: 70vh; /* or 65vh for more margin */
+      height: 70vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+    }
+    .flip-card-front > div,
+    .flip-card-back {
+      max-height: 60vh; /* slightly less than card to allow for padding */
+      overflow-y: auto;
+      padding-bottom: 1rem;
+    }
+    .flip-card-front > div::-webkit-scrollbar,
+    .flip-card-back::-webkit-scrollbar {
+      width: 4px;
+      background: #222;
+    }
+    .flip-card-front > div::-webkit-scrollbar-thumb,
+    .flip-card-back::-webkit-scrollbar-thumb {
+      background: #3a5c3a;
+      border-radius: 2px;
+    }
   }
 
   /* Contact dropdown */
