--- a/professional.html
+++ b/professional.html
@@ -91,7 +91,7 @@
 
   @media (max-width: 768px) {
     .carousel-container {
-      padding-bottom: 5rem !important;
+      padding-bottom: 8rem !important;
     }
     .carousel-track {
       /* Remove transform-style to avoid conflicts with flip cards */
@@ -119,8 +119,8 @@
     }
     .flip-card-front, .flip-card-back {
       min-height: 420px !important;
-      max-height: 70vh !important;
-      overflow-y: auto !important;
+      max-height: none !important;
+      overflow-y: visible !important;
     }
     .flip-card:not(.flipped) .flip-card-back {
       display: none !important;
